# CrossCompileForAndroidUseCommand

./: README.txt
ScreenShots/: Haroopad
c/: CMakeLists.txt  Native.c
java/: com_jni_MyJni.h
java/com/jni/: MyJni.java
